CRUD AND API Sale
